--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Bootstrap Config</title>
-  <link rel="stylesheet" href="../vendor/bootstrap/css/bootstrap.min.css">
-  <!-- bower:css -->
-  <!-- endbower -->
+  <link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
 </head>
 <body>
 
@@ -37,9 +35,6 @@
     </form>
 
   </div> <!-- end container -->
-
-  <!-- bower:js -->
-  <!-- endbower -->
 
 </body>
 </html>
